h1 and para is added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>git practice</title>
 </head>
 <body>
-    
+    <h1>Learning github</h1>
+    <p>Git is a distributive version control system used for tracking changes in the code and maintain the history of it.</p>
 </body>
 </html>
