--- a/index.html
+++ b/index.html
@@ -3,10 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>git practice</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Learning github</h1>
-    <p>Git is a distributive version control system used for tracking changes in the code and maintain the history of it.</p>
+    <h1>Hello world</h1>
 </body>
 </html>
